--- a/_posts/2024-01-14-建站日志.md
+++ b/_posts/2024-01-14-建站日志.md
@@ -11,7 +11,7 @@ featured: true
 ---
 
 为了更好地展示自己与记录自己的生活，在22岁生日那天，我下定决心建立起一个个人网站，作为对内记录空间，对外展示天地。
-本网站同时服务于本人的学术发展道路与生活记录，作为本人的综合信息记录平台，我决定使用如下方式进行运作：
+本网站同时服务于本人的学术发展道路与生活记录，为了更好地将二者融合，在学术板块，我将全程使用英文，而在生活板块，我将使用中文。作为本人的综合信息记录平台，我决定以如下方式进行运作：
 # 1. 学术
 
 
