--- a/_posts/2024-01-14-init.md
+++ b/_posts/2024-01-14-init.md
@@ -1,10 +1,9 @@
 ---
 layout: post
 title: 建站日志
-description: 建站日志
-tags: 记录
+description: 个人网站开通日志与各部分使用介绍
+tags: distill formatting
 giscus_comments: true
-related_posts: false
 date: 2024-01-14 19:52:00
 featured: true
 ---
