--- a/_posts/2024-01-12-init.md
+++ b/_posts/2024-01-12-init.md
@@ -17,4 +17,4 @@ featured: true
 
 ## 2. 生活
 我本人是不太喜欢发朋友圈的，因为
-为了记录一些个人想法和生活点滴，在**Life**板块下，我开通了**紫藤阁**博客板块，我将会把生活中值得记录的想法和瞬间展示在上面
+为了记录一些个人想法和生活点滴，在**blog**板块下，我开通了**紫藤阁**博客板块，我将会把生活中值得记录的想法和瞬间展示在上面
