--- a/_posts/2023-09-18-10.md
+++ b/_posts/2023-09-18-10.md
@@ -10,6 +10,9 @@ giscus_comments: true
 featured: false
 ---
 2023年9-11月：全国大学生数学竞赛
+
 2023.11.9, 最后两天！
+
 2023.11.10:明日再出征，祝一切顺利！
+{% include figure.liquid loading="eager" path="assets/img/math.png" class="img-fluid rounded z-depth-1" %}
 2024.1.7: 成功获奖！感谢努力！
