--- a/_projects/2020-2021.md
+++ b/_projects/2020-2021.md
@@ -1,11 +1,11 @@
 ---
 layout: page
-title: project 6
-description: a project with no image
-img:
-importance: 4
+title: 高四
+description: 2020-2021学年
+img: assets/img/2020-2021.jpg
+importance: 2
 category: fun
-redirect: https://photo.baidu.com/photo/wap/albumShare/invite/jsEFOKyLz?from=linkShare
+redirect: https://photo.baidu.com/photo/wap/albumShare/invite/MpXNrlbLom?from=linkShare
 ---
 
 Every project has a beautiful feature showcase page.
