--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,6 +7,7 @@
   abbr={PhysRev},
   title={Artificial Intelligence Brings New Opportunities to the Education Industry},
   author={Rongbin Wang},
+  journal={Model International Conference of BUPT},
   year={2023},
   month={April},
   pdf={Artificial Intelligence Brings New Opportunities to the Education Industry.pdf},
