--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,8 +3,7 @@
 
 @string{aps = {American Physical Society,}}
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
+@article{MIC,
   title={Artificial Intelligence Brings New Opportunities to the Education Industry},
   author={Rongbin Wang},
   journal={Model International Conference of BUPT},
