--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,6 +9,7 @@
   journal={Model International Conference of BUPT},
   year={2023},
   month={April},
+  html={https://mp.weixin.qq.com/s/3qXcyK2U5R0ei3T0289-kg},
   pdf={Artificial Intelligence Brings New Opportunities to the Education Industry.pdf},
   dimensions={true},
   selected={true}
